generated/grammar/gpslParser.js
// Generated from grammar/gpsl.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import gpslListener from './gpslListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class gpslParser extends antlr4.Parser {

    static grammarFileName = "gpsl.g4";
    static literalNames = [ null, "'['", "']'", null, null, null, null, 
                            null, null, null, "'in'", null, null, null, 
                            null, null, null, null, null, null, "'nfa'", 
                            "'buchi'", "'states'", "'initial'", "'accept'", 
                            null, null, null, null, null, "'='", "'*='", 
                            "','", "';'", "'('", "')'" ];
    static symbolicNames = [ null, null, null, "CONJUNCTION", "DISJUNCTION", 
                             "EQUIVALENCE", "EVENTUALLY", "FALSE", "GLOBALLY", 
                             "IMPLICATION", "IN", "LET", "NEGATION", "NEXT", 
                             "SUNTIL", "WUNTIL", "SRELEASE", "WRELEASE", 
                             "TRUE", "XOR", "NFA", "BUCHI", "STATES", "INITIAL", 
                             "ACCEPT", "ATOMINLINE", "PIPEATOM", "QUOTEATOM", 
                             "IDENTIFIER", "NATURAL", "EQ", "SEQ", "COMMA", 
                             "SEMICOLON", "LPAREN", "RPAREN", "LINE_COMMENT", 
                             "COMMENT", "WS" ];
    static ruleNames = [ "block", "formulaDeclaration", "formulaDeclarationList", 
                         "formula", "literal", "atom", "letDecl", "stateDecl", 
                         "initialDecl", "acceptDecl", "transitionDecl", 
                         "automatonDecl", "automaton", "reserved" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = gpslParser.ruleNames;
        this.literalNames = gpslParser.literalNames;
        this.symbolicNames = gpslParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 3:
    	    		return this.formula_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    formula_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		case 3:
    			return this.precpred(this._ctx, 3);
    		case 4:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, gpslParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 28;
	            this.formulaDeclaration();
	            this.state = 31; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===28);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	formulaDeclaration() {
	    let localctx = new FormulaDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, gpslParser.RULE_formulaDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this.match(gpslParser.IDENTIFIER);
	        this.state = 34;
	        _la = this._input.LA(1);
	        if(!(_la===30 || _la===31)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 37;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 35;
	            this.formula(0);
	            break;

	        case 2:
	            this.state = 36;
	            this.automaton();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	formulaDeclarationList() {
	    let localctx = new FormulaDeclarationListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, gpslParser.RULE_formulaDeclarationList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 39;
	        this.formulaDeclaration();
	        this.state = 44;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 40;
	                this.match(gpslParser.COMMA);
	                this.state = 41;
	                this.formulaDeclaration(); 
	            }
	            this.state = 46;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	        }

	        this.state = 48;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===32) {
	            this.state = 47;
	            this.match(gpslParser.COMMA);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	formula(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new FormulaContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 6;
	    this.enterRecursionRule(localctx, 6, gpslParser.RULE_formula, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 7:
	        case 18:
	            localctx = new LiteralExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 51;
	            this.literal();
	            break;
	        case 28:
	            localctx = new ReferenceExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 52;
	            this.match(gpslParser.IDENTIFIER);
	            break;
	        case 25:
	            localctx = new AtomExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 53;
	            this.atom();
	            break;
	        case 34:
	            localctx = new ParenExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 54;
	            this.match(gpslParser.LPAREN);
	            this.state = 55;
	            this.formula(0);
	            this.state = 56;
	            this.match(gpslParser.RPAREN);
	            break;
	        case 12:
	            localctx = new UnaryExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 58;
	            localctx.operator = this.match(gpslParser.NEGATION);
	            this.state = 59;
	            this.formula(9);
	            break;
	        case 13:
	            localctx = new UnaryExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 60;
	            localctx.operator = this.match(gpslParser.NEXT);
	            this.state = 61;
	            this.formula(8);
	            break;
	        case 6:
	        case 8:
	            localctx = new UnaryExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 62;
	            localctx.operator = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===6 || _la===8)) {
	                localctx.operator = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 63;
	            this.formula(7);
	            break;
	        case 11:
	            localctx = new LetExpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 64;
	            this.letDecl();
	            this.state = 65;
	            this.formula(1);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 86;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 84;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new BinaryExpContext(this, new FormulaContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, gpslParser.RULE_formula);
	                    this.state = 69;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 70;
	                    localctx.operator = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 245760) !== 0))) {
	                        localctx.operator = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 71;
	                    this.formula(6);
	                    break;

	                case 2:
	                    localctx = new BinaryExpContext(this, new FormulaContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, gpslParser.RULE_formula);
	                    this.state = 72;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 73;
	                    localctx.operator = this.match(gpslParser.CONJUNCTION);
	                    this.state = 74;
	                    this.formula(6);
	                    break;

	                case 3:
	                    localctx = new BinaryExpContext(this, new FormulaContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, gpslParser.RULE_formula);
	                    this.state = 75;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 76;
	                    localctx.operator = this.match(gpslParser.DISJUNCTION);
	                    this.state = 77;
	                    this.formula(5);
	                    break;

	                case 4:
	                    localctx = new BinaryExpContext(this, new FormulaContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, gpslParser.RULE_formula);
	                    this.state = 78;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 79;
	                    localctx.operator = this.match(gpslParser.XOR);
	                    this.state = 80;
	                    this.formula(4);
	                    break;

	                case 5:
	                    localctx = new BinaryExpContext(this, new FormulaContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, gpslParser.RULE_formula);
	                    this.state = 81;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 82;
	                    localctx.operator = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===5 || _la===9)) {
	                        localctx.operator = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 83;
	                    this.formula(2);
	                    break;

	                } 
	            }
	            this.state = 88;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	literal() {
	    let localctx = new LiteralContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, gpslParser.RULE_literal);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 89;
	        _la = this._input.LA(1);
	        if(!(_la===7 || _la===18)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom() {
	    let localctx = new AtomContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, gpslParser.RULE_atom);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        this.match(gpslParser.ATOMINLINE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letDecl() {
	    let localctx = new LetDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, gpslParser.RULE_letDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        this.match(gpslParser.LET);
	        this.state = 94;
	        this.formulaDeclarationList();
	        this.state = 95;
	        this.match(gpslParser.IN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stateDecl() {
	    let localctx = new StateDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, gpslParser.RULE_stateDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.match(gpslParser.STATES);
	        this.state = 98;
	        this.match(gpslParser.IDENTIFIER);
	        this.state = 103;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===32) {
	            this.state = 99;
	            this.match(gpslParser.COMMA);
	            this.state = 100;
	            this.match(gpslParser.IDENTIFIER);
	            this.state = 105;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	initialDecl() {
	    let localctx = new InitialDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, gpslParser.RULE_initialDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.match(gpslParser.INITIAL);
	        this.state = 107;
	        this.match(gpslParser.IDENTIFIER);
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===32) {
	            this.state = 108;
	            this.match(gpslParser.COMMA);
	            this.state = 109;
	            this.match(gpslParser.IDENTIFIER);
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	acceptDecl() {
	    let localctx = new AcceptDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, gpslParser.RULE_acceptDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.match(gpslParser.ACCEPT);
	        this.state = 116;
	        this.match(gpslParser.IDENTIFIER);
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===32) {
	            this.state = 117;
	            this.match(gpslParser.COMMA);
	            this.state = 118;
	            this.match(gpslParser.IDENTIFIER);
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transitionDecl() {
	    let localctx = new TransitionDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, gpslParser.RULE_transitionDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this.match(gpslParser.IDENTIFIER);
	        this.state = 126;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 537133184) !== 0)) {
	            this.state = 125;
	            localctx.priority = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 537133184) !== 0))) {
	                localctx.priority = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 128;
	        this.match(gpslParser.T__0);
	        this.state = 129;
	        this.formula(0);
	        this.state = 130;
	        this.match(gpslParser.T__1);
	        this.state = 131;
	        this.match(gpslParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	automatonDecl() {
	    let localctx = new AutomatonDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, gpslParser.RULE_automatonDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20 || _la===21) {
	            this.state = 133;
	            _la = this._input.LA(1);
	            if(!(_la===20 || _la===21)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 136;
	        this.stateDecl();
	        this.state = 137;
	        this.match(gpslParser.SEMICOLON);
	        this.state = 138;
	        this.initialDecl();
	        this.state = 139;
	        this.match(gpslParser.SEMICOLON);
	        this.state = 140;
	        this.acceptDecl();
	        this.state = 141;
	        this.match(gpslParser.SEMICOLON);
	        this.state = 142;
	        this.transitionDecl();
	        this.state = 147;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===33) {
	            this.state = 143;
	            this.match(gpslParser.SEMICOLON);
	            this.state = 144;
	            this.transitionDecl();
	            this.state = 149;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	automaton() {
	    let localctx = new AutomatonContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, gpslParser.RULE_automaton);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===11) {
	            this.state = 150;
	            this.letDecl();
	        }

	        this.state = 153;
	        this.automatonDecl();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	reserved() {
	    let localctx = new ReservedContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, gpslParser.RULE_reserved);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1048568) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

gpslParser.EOF = antlr4.Token.EOF;
gpslParser.T__0 = 1;
gpslParser.T__1 = 2;
gpslParser.CONJUNCTION = 3;
gpslParser.DISJUNCTION = 4;
gpslParser.EQUIVALENCE = 5;
gpslParser.EVENTUALLY = 6;
gpslParser.FALSE = 7;
gpslParser.GLOBALLY = 8;
gpslParser.IMPLICATION = 9;
gpslParser.IN = 10;
gpslParser.LET = 11;
gpslParser.NEGATION = 12;
gpslParser.NEXT = 13;
gpslParser.SUNTIL = 14;
gpslParser.WUNTIL = 15;
gpslParser.SRELEASE = 16;
gpslParser.WRELEASE = 17;
gpslParser.TRUE = 18;
gpslParser.XOR = 19;
gpslParser.NFA = 20;
gpslParser.BUCHI = 21;
gpslParser.STATES = 22;
gpslParser.INITIAL = 23;
gpslParser.ACCEPT = 24;
gpslParser.ATOMINLINE = 25;
gpslParser.PIPEATOM = 26;
gpslParser.QUOTEATOM = 27;
gpslParser.IDENTIFIER = 28;
gpslParser.NATURAL = 29;
gpslParser.EQ = 30;
gpslParser.SEQ = 31;
gpslParser.COMMA = 32;
gpslParser.SEMICOLON = 33;
gpslParser.LPAREN = 34;
gpslParser.RPAREN = 35;
gpslParser.LINE_COMMENT = 36;
gpslParser.COMMENT = 37;
gpslParser.WS = 38;

gpslParser.RULE_block = 0;
gpslParser.RULE_formulaDeclaration = 1;
gpslParser.RULE_formulaDeclarationList = 2;
gpslParser.RULE_formula = 3;
gpslParser.RULE_literal = 4;
gpslParser.RULE_atom = 5;
gpslParser.RULE_letDecl = 6;
gpslParser.RULE_stateDecl = 7;
gpslParser.RULE_initialDecl = 8;
gpslParser.RULE_acceptDecl = 9;
gpslParser.RULE_transitionDecl = 10;
gpslParser.RULE_automatonDecl = 11;
gpslParser.RULE_automaton = 12;
gpslParser.RULE_reserved = 13;

class BlockContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gpslParser.RULE_block;
    }

	formulaDeclaration = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FormulaDeclarationContext);
	    } else {
	        return this.getTypedRuleContext(FormulaDeclarationContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.enterBlock(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.exitBlock(this);
		}
	}


}



class FormulaDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gpslParser.RULE_formulaDeclaration;
    }

	IDENTIFIER() {
	    return this.getToken(gpslParser.IDENTIFIER, 0);
	};

	SEQ() {
	    return this.getToken(gpslParser.SEQ, 0);
	};

	EQ() {
	    return this.getToken(gpslParser.EQ, 0);
	};

	formula() {
	    return this.getTypedRuleContext(FormulaContext,0);
	};

	automaton() {
	    return this.getTypedRuleContext(AutomatonContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.enterFormulaDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.exitFormulaDeclaration(this);
		}
	}


}



class FormulaDeclarationListContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gpslParser.RULE_formulaDeclarationList;
    }

	formulaDeclaration = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(FormulaDeclarationContext);
	    } else {
	        return this.getTypedRuleContext(FormulaDeclarationContext,i);
	    }
	};

	COMMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(gpslParser.COMMA);
	    } else {
	        return this.getToken(gpslParser.COMMA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.enterFormulaDeclarationList(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.exitFormulaDeclarationList(this);
		}
	}


}



class FormulaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = gpslParser.RULE_formula;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class LiteralExpContext extends FormulaContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	literal() {
	    return this.getTypedRuleContext(LiteralContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.enterLiteralExp(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof gpslListener ) {
	        listener.exitLiteralExp(this);
		}
	}


}

gpslParser.LiteralExpContext = LiteralExpContext;

class ReferenceExpContext extends FormulaContext {
